tests/ui/rpc/fail/sync_function_not_returning_stream.rs
use zod::{rpc, Namespace};

#[derive(Namespace)]
struct A;

#[rpc]
impl A {
    fn test(&mut self) -> String {
        String::new()
    }
}

fn main() {}
